# HuluAiChat

./: .auto-loop-state  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTO_COMPANY_README.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HuluChat.spec  LICENSE  Makefile  PRODUCT_HUNT.md  PROMPT.md  README.md  README_EN.md  TASKS.md  auto_loop.py  build-linux.sh  build-macos.sh  build.bat  build.ps1  email_v372_complete.json  main.py  monitor.py  pytest.ini  requirements.txt  wrangler.jsonc
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
docs/: API_SETUP.md  I18N_LANGUAGES.md  MAKER_BUTTON.md  MCP_GUIDE.md  USER_GUIDE.md  changlog.md  user-interview-plan.md  v3.53.0-community-launch-assets.md  v3.56.0-roadmap.md  v3.58.0-roadmap.md  v3.59.0-roadmap.md  v3.60.0-roadmap.md
huluchat-v3/: .env.example  .gitignore  CHANGELOG.md  TASKS.md  eslint.config.js  latest.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
huluchat-v3/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
huluchat-v3/src-tauri/capabilities/: default.json
huluchat-v3/src-tauri/src/: lib.rs  main.rs
installer/: HuluChat.nsi
memories/: consensus.md  product-hunt-prep.md
scripts/: e2e-test.sh  generate_brand_assets.py  send-email.py  sync_ico_from_png.py  write_posters_utf8.py
src/: __init__.py  app_data.py  logging_config.py  main.py  py.typed
tests/: BUG_REPORT.md  FIX_LOG.md  __init__.py  conftest.py  test_app_data.py  test_config_models.py  test_config_store.py  test_exporter.py  (+10 more)
(+549 files in other folders)
