[package]
name = "huluchat-v3"
version = "3.48.0"
description = "HuluChat - AI Chat Desktop Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "huluchat_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release 优化配置 - 减小二进制体积
[profile.release]
lto = true              # Link Time Optimization
codegen-units = 1       # 单代码生成单元，更好优化
strip = true            # 移除符号表
opt-level = "z"         # 优化体积（比 "s" 更激进）
panic = "abort"         # panic 时直接终止，减小体积

